# fast-api-chess-server

./: .env.sample  .gitignore  debug_server.py  docker-compose-test.yml  docker-compose.yml  mypy.ini  pyproject.toml
.circleci/: config.yml  config.yml-old
app/: main.py
app/api/dependencies/: auth.py  database.py
app/api/errors/: auth_error.py
app/api/routes/: api.py  authentication.py  chess_db.py  pgn.py
app/core/: config.py  events.py
app/db/: events.py
app/db/migrations/versions/: 58fced675d71_create_auth0_profile_table.py  7733e154f263_create_database_game_table.py  7cd9314e48bf_create_account_table.py  cd39376ce37d_create_database_table.py
app/db/repositories/: auth0_users.py  base.py  chess_db.py  chess_db_game.py  users.py
app/models/: common.py
app/models/domain/: chess_database.py  serializable_game.py  users.py
app/models/schemas/: chess_db.py  pgn.py  users.py
app/resources/: strings.py
app/services/: chess.py  jwt.py
docker/: db.Dockerfile  dev.Dockerfile  test.Dockerfile
pgn/: test.pgn  test2.pgn  test3.pgn
stubs/asyncpg/: __init__.pyi  connection.pyi  pool.pyi
stubs/passlib/: context.pyi
tests/: conftest.py
tests/test_api/test_routes/: test_chess_db.py  test_login.py  test_registration.py
tests/test_repositories/: test_chess_db_game_repo.py  test_chess_db_repo.py
